[gd_scene load_steps=3 format=3 uid="uid://dmb1acg6lojr5"]

[ext_resource type="Script" path="res://scripts/control/menu_pause.gd" id="1_wm58i"]
[ext_resource type="Theme" uid="uid://bpw54qrjueliy" path="res://control/theme/pink_theme.tres" id="2_ao2jd"]

[node name="MenuPause" type="Node2D"]
script = ExtResource("1_wm58i")
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 352.0
offset_bottom = 197.0
theme = ExtResource("2_ao2jd")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.113725, 0.141176, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -22.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Resume" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Resume"

[node name="MainMenu" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Quit"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
